Fix `bypassAutoDecrypt` settings in shell

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1, 4.2.2
    • Affects Version/s: None
    • Component/s: Shell
    • None
    • Fully Compatible
    • v4.2
    • Security 2019-09-23, Security 2019-10-07, Security 2019-10-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      AutoDecrypt behavior is different between enterprise and community when the bypassAutoDecrypt flag is on. This feature needs to be fixed.

            Assignee:
            Shreyas Kalyan (Inactive)
            Reporter:
            Shreyas Kalyan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: