SERVER-42886 Fix bypassAutoDecrypt settings in shell

GitOrigin-RevId: 0ae6f60e6c609f965ae913497b79ef4933a4b081